# DiningPhilosophers

./: .gitignore  CMakeLists.txt  Philosopher.cpp  README.md  main.cpp
.github/workflows/: cpp-analysis.yml
Project1/: CMakeLists.txt  Dijkstra.cpp  Dijkstra.h  Philosopher.cpp  Philosopher.h  main.cpp
Project2/: CMakeLists.txt  Client.cpp  Client.h  ClientHandler.cpp  ClientHandler.h  Server.cpp  Server.h  main.cpp
